--- a/app/src/main/res/layout/recycle_view_category_units_item.xml
+++ b/app/src/main/res/layout/recycle_view_category_units_item.xml
@@ -7,10 +7,12 @@
 
     <TextView
         android:id="@+id/RecycleView_CategoryUnits_item_TextView_Category"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:padding="@dimen/RecycleView_CategoryUnits_item_TextView_Category_padding"
+        android:textAlignment="center"
+        android:transitionName="shared_text"
         tools:text="HELLO" />
 
 </FrameLayout>
