--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/main_fl_root"
     tools:context=".MainActivity">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id = "@+id/activity_main_RecycleView_CategoryUnits"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-
 
 </FrameLayout>
